tests/e2e/failing/receive/non-exhaustive.unt
thread_def Main {
  receive {
    int x -> print("hi");
  }
}